# opentelemetry-tutorial

./: README.md
go/: README.md  go.mod  go.sum
go/lesson01/: README.md
go/lesson01/solution/: hello.go
go/lesson02/: README.md
go/lesson02/solution/: hello.go
go/lesson03/: README.md
go/lesson03/exercise/client/: hello.go
go/lesson03/solution/client/: hello.go
go/lesson03/solution/formatter/: formatter.go
go/lesson03/solution/publisher/: publisher.go
go/lesson04/: README.md
go/lesson04/solution/client/: hello.go
go/lesson04/solution/formatter/: formatter.go
go/lesson04/solution/publisher/: publisher.go
go/lib/http/: client.go
go/lib/tracing/: init.go
python/: README.md  pyproject.toml  requirements.txt
python/lesson01/: README.md
python/lesson01/solution/: hello.py
python/lesson02/: README.md
python/lesson02/solution/: hello.py
python/lesson03/: README.md
python/lesson03/exercise/: formatter.py  hello.py  publisher.py
python/lesson03/solution/: formatter.py  hello.py  publisher.py
python/lesson04/: README.md
python/lesson04/solution/: formatter.py  hello.py  publisher.py
python/lib/: tracing.py
rust/: README.md
rust/lesson01/: Cargo.toml  README.md
rust/lesson01/src/: main.rs
rust/lesson02/: Cargo.toml  README.md
rust/lesson02/src/: main.rs
rust/lesson03/: README.md
rust/lesson03/exercise/: Cargo.toml
rust/lesson03/exercise/src/: lib.rs
rust/lesson03/solution/src/: lib.rs
rust/lesson04/: README.md
rust/lesson04/exercise/: Cargo.toml
rust/lesson04/solution/src/: lib.rs
