[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0" }
opentelemetry-http = { version = "0.28.0" }
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "metrics", "http-proto", "reqwest"] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry-proto = "0.28.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = "0.7"  # Latest stable version
serde = { version = "1", features = ["derive"] }  # For query param deserialization